Wrap NEWS -- history of user-visible changes.

Copyright (C) 1996-2017 Paul J. Lucas.
See the end of the file for license conditions.

* Changes in Wrap 5.1

** End‐of‐Line Comment Aligning Improvement
Now aligns only comments that are really at the end of the line (as opposed to
within a line).

* Changes in Wrap 5.0

** End‐of‐Line Comment Aligning
Wrapc can now align end-of-line comments at a given column.

** Alias importing.
Aliases in configuration files can now import other aliases.

** More lenient alias names.
In addition to alphanumeric and the underscore character, alias names may now
also use any of the +-.: characters.

* Changes in Wrap 4.11

** Better handling of --comment-chars/-D value.
Wrapc now accepts only punctuation characters for the --comment-chars/-D value.
Duplicated characters may be given, but are ignored.  Whitespace is also
ignored.

** Wrap to terminal width.
Wrap and wrapc now accept one of "t", "term", or "terminal" as an argument to
either the --width or -w option to set the line width to the width of the
terminal in which either wrap or wrapc is running.

* Changes in Wrap 4.10

** Long command-line options.
Both wrap and wrapc now additionally accept long command-line options.

* Changes in Wrap 4.9

** No longer wrapping at hyphen characters within URIs.
An unintended consequence of adding wrapping at hyphen characters in 4.6 is
that URIs containing hyphens are also wrapped which isn't what is usually
wanted.  Wrap and wrapc no longer wrap at hyphen characters within file, FTP,
HTTP, or HTTPS URIs, or within e-mail addresses.

* Changes in Wrap 4.8

** Added ability to specify number of spaces after an end-of-sentence.
Wrap and wrapc now have a -E option that allows the number of spaces after an
end-of-sentence to be specified.

* Changes in Wrap 4.7

** Added better Unicode support.
Wrap now supports all Unicode question and exclamation marks, right quotation