@@ -1,0 +1,1 @@
+wrapc | /dev/null | -A41 -D{ | wrapc-A-08b.pas | 0
